<resources>
    <string name="app_name">Hello Android</string>

    <string name="welcome">Welcome !!!</string>
    <string name="good_morning">Good Morning !!!</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="login_here">Login Here!!!</string>
    <string name="register_here">Register Here!!!</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="dashboard">Dashboard</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer_dashboard">DrawerDashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_product">Product</string>
    <string name="menu_vendor">Vendor</string>
    <string name="menu_customer">Customer</string>
    <string name="new_product">New Product</string>

</resources>