<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_product">

    <fragment
        android:id="@+id/nav_product"
        android:name="com.example.helloandroid.ui.product.ProductFragment"
        android:label="@string/menu_product"
        tools:layout="@layout/fragment_product" >
        <action
            android:id="@+id/action_nav_product_to_nav_new_product"
            app:destination="@id/nav_new_product" />
    </fragment>
    <fragment
        android:id="@+id/nav_customer"
        android:name="com.example.helloandroid.ui.customer.CustomerFragment"
        android:label="@string/menu_customer"
        tools:layout="@layout/fragment_customer" />
    <fragment
        android:id="@+id/nav_vendor"
        android:name="com.example.helloandroid.ui.vendor.VendorFragment"
        android:label="@string/menu_vendor"
        tools:layout="@layout/fragment_vendor" />
    <fragment
        android:id="@+id/nav_new_product"
        android:name="com.example.helloandroid.ui.product.NewProductFragment"
        android:label="@string/new_product"
        tools:layout="@layout/fragment_new_product" />
</navigation>